<resources>
    <string name="app_name">MyWhatsApp</string>
    <string name="from">from</string>
    <string name="meta">Meta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chats">Chats</string>
    <string name="updates">Updates</string>
    <string name="calls">Calls</string>
    <string name="new_community">New community</string>
    <string name="status">Status</string>
    <string name="date">23/3/22</string>
    <string name="create_link">Create call link</string>
    <string name="share_link">Share a link for your WhatsApp call</string>
    <string name="recent">Recent</string>
    <string name="date_month">December 12, 5:34 PM</string>
    <string name="message">Message</string>
    <string name="select_contact">Select contact</string>
    <string name="_1_contacts">101 contacts</string>
    <string name="new_group">New group</string>
    <string name="contact_on_whatsapp">Contacts on WhatsApp</string>
    <string name="call_info">Call info</string>
    <string name="outgoing">Outgoing</string>
    <string name="unavailable">Unavailable</string>
</resources>