<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="15dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivProfileDP"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:scaleType="centerCrop"
            android:src="@drawable/img"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/imageParent"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:padding="6dp"
            android:src="@drawable/ic_call_send"
            app:tint="@color/icons" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/outgoing"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvTimeTaken"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/unavailable"
                    android:textColor="#868c92"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:id="@+id/ivCallType"
                    android:layout_width="16sp"
                    android:layout_height="16sp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/ic_call"
                    app:tint="@color/default_text" />

                <TextView
                    android:id="@+id/tvTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/date_month"
                    android:textColor="#868c92"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tvData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="723"
                    android:textColor="#868c92"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>