<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.NewChatActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_back"
            app:subtitle="@string/_1_contacts"
            app:subtitleTextColor="@color/white"
            app:title="@string/select_contact" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="15dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_item_chat"
                    android:backgroundTint="@color/icons"
                    android:padding="6dp"
                    android:src="@drawable/ic_group"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:padding="15dp"
                    android:maxLines="1"
                    android:text="@string/new_group"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="15dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_item_chat"
                    android:backgroundTint="@color/icons"
                    android:padding="10dp"
                    android:src="@drawable/ic_add_account"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:padding="15dp"
                    android:maxLines="1"
                    android:text="@string/new_group"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_qr_code"
                    app:tint="@color/default_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="15dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_item_chat"
                    android:backgroundTint="@color/icons"
                    android:padding="10dp"
                    android:src="@drawable/ic_community"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:padding="15dp"
                    android:maxLines="1"
                    android:text="@string/new_group"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:padding="15dp"
                android:maxLines="1"
                android:text="@string/contact_on_whatsapp"
                android:textSize="16sp"
                android:textColor="@color/default_text"/>

            <include layout="@layout/item_new_chat"/>
            <include layout="@layout/item_new_chat"/>
            <include layout="@layout/item_new_chat"/>
            <include layout="@layout/item_new_chat"/>
            <include layout="@layout/item_new_chat"/>
            <include layout="@layout/item_new_chat"/>
            <include layout="@layout/item_new_chat"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>